# relaciona-brasil

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
.kamal/: secrets
config/: deploy.yml  postgresql.conf
migrations/: 0001_schema.sql  0002_pivot_lazy.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  scheduler.rs  worker.rs
src/api/: empresa.rs  health.rs  jobs.rs  mod.rs  relacionamento.rs  socio.rs
src/domain/: types.rs
src/ingest/: checkpoint.rs  decode.rs  download.rs  load.rs  mod.rs  parse.rs  pgcopy.rs  pipeline.rs
src/jobs/: mod.rs  queue.rs  webhook.rs
src/persist/: mod.rs  upsert.rs
src/source/: bucketize.rs  download.rs  index.rs  mod.rs  nextcloud.rs  parse.rs  scan.rs  unzip.rs  vintage.rs
