[package]
name = "relaciona-brasil"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
repository = "https://github.com/IsraelAraujo70/relaciona-brasil"
description = "API pública de relacionamentos entre empresas e pessoas no Brasil — ingere mensalmente o dump de CNPJ da Receita Federal."

[[bin]]
name = "relaciona-brasil"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
futures = "0.3"
async-trait = "0.1"

axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tower_governor = "0.8"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }

sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono"] }

async_zip = { version = "0.0.17", features = ["full"] }
csv-async = { version = "1", features = ["tokio"] }
encoding_rs = "0.8"

tokio-cron-scheduler = "0.13"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

thiserror = "2"
anyhow = "1"

figment = { version = "0.10", features = ["env", "toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

clap = { version = "4", features = ["derive", "env"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
